# de-project-final-repo

./: .env.template  .gitignore  Makefile  README.md  config.yaml  docker-compose.yaml  docker-xyz.yaml  notebook.ipynb  pyproject.toml  requirements.txt  table.txt
configs/airflow/: airflow.cfg
configs/spark/: log4j2.properties
dags/: dag.py
docker/airflow/: Dockerfile
docker/producer/: Dockerfile
docker/spark/: Dockerfile
src/clients/: __init__.py
src/clients/kafka/: __init__.py
src/clients/s3/: __init__.py
src/clients/vertica/: __init__.py
src/config/: __init__.py
src/logger/: __init__.py
src/producer/: runner.py
src/producer/processor/: __init__.py
src/producer/utils/: __init__.py
src/static/: config.yaml  runner.py
src/stg/: runner.py
src/stg/processor/: __init__.py
src/stg/sql/: currency.sql  transaction.sql
src/stream/: __init__.py  runner.py  stream.py
src/stream/components/: __init__.py
src/stream/config/: __init__.py
src/stream/query/: __init__.py
src/transaction_service_clean_collector/: __init__.py  config.yaml  runner.py
src/transaction_service_clean_collector/collector/: __init__.py
src/transaction_service_input_producer/: __init__.py  config.yaml  runner.py
src/transaction_service_input_producer/processor/: __init__.py
src/transaction_service_input_producer/utils/: __init__.py
src/transaction_service_stream_collector/: __init__.py  config.yaml  runner.py
src/transaction_service_stream_collector/query/: __init__.py
tests/click/: test_click.py
tests/config/: test_config.py
tests/dotenv/: test_dotenv.py
tests/messages/: currency.json  transaction.json
tests/stg/: test_processor.py
tests/stream/: __init__.py
tests/stream/components/: __init__.py
