[tool.poetry]
name = "de-project-final-repo"
version = "0.1.0"
repository = "https://github.com/leonidee/spark-static-stream-job"
description = ""
authors = ["Grishenkov Leonid <grishenkovleonid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1"
ipykernel = "^6.25.2"
vertica-python = "^1.3.5"

[tool.poetry.group.spark.dependencies]
findspark = "2.0.1"
python-dotenv = "1.0.0"
click = "8.1.7"
pyyaml = "6.0.1"


[tool.poetry.group.dev.dependencies]
python-dotenv = "1.0.0"
click = "8.1.7"
pyyaml = "6.0.1"
s3fs = "^2023.9.2"
pyarrow = "^13.0.0"

[tool.poetry.group.transaction-service-input-producer.dependencies]
kafka-python = "^2.0.2"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
s3fs = "^2023.9.2"
pyarrow = "^13.0.0"
pandas = "2.1"
click = "8.1.7"
